--- a/program/gnu_cpp_lz77.htm
+++ b/program/gnu_cpp_lz77.htm
@@ -1,52 +1,9 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>GNU &gt;&gt; C/C++</h3>
-<p><b>lz77 compress</b></p>
-<hr size="1">
+<h3><a href="../program.htm">程式語言</a> - GNU - C/C++ - <b>LZ77 Compress</b></h3>
+<hr size="1"><br>
 <p>
 main.c
 </p>
@@ -138,19 +95,19 @@ int main(int argc, char **argv)
     int r = 0;
     int fd = -1;
 
-    fd = open("xxx.bin", O_RDONLY);
+    fd = open("test.bin", O_RDONLY);
     r = read(fd, file, sizeof(file));
     close(fd);
     printf("file length: %d\n", r);
 
     r = lz77_compress(file, r, lz);
-    fd = open("xxx.lz77", O_CREAT | O_WRONLY, 0644);
+    fd = open("test.lz77", O_CREAT | O_WRONLY, 0644);
     write(fd, lz, r);
     close(fd);
     printf("compress length: %d\n", r);
 
     r = lz77_decompress(lz, unlz);
-    fd = open("xxx.unlz77", O_CREAT | O_WRONLY, 0644);
+    fd = open("test.unlz77", O_CREAT | O_WRONLY, 0644);
     write(fd, unlz, r);
     close(fd);
     printf("decompress length: %d\n", r);
@@ -163,22 +120,14 @@ int main(int argc, char **argv)
 </p>
 <pre>
 $ gcc main.c -o main
-$ echo "123" &gt; xxx.bin
+$ echo "123" &gt; test.bin
 $ ./main
     file length: 4
     compress length: 16
     decompress length: 4
 
-$ cat xxx.unlz77
+$ cat test.unlz77
     123
-</pre><br>
+</pre>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
