--- a/program.htm
+++ b/program.htm
@@ -185,21 +185,21 @@ GNU</h3>
 &oplus;
 <b>Assembly (ARM)</b><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/arm_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_arm_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/arm_hello_printf.htm">
-    hello, world! (printf)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_arm_hello_printf.htm">
+    Hello, world!(printf)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/arm_hello_swi_eabi.htm">
-    hello, world! (swi, eabi)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_arm_hello_swi_eabi.htm">
+    Hello, world!(swi, eabi)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/arm_hello_swi_oabi.htm">
-    hello, world! (swi, oabi)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_arm_hello_swi_oabi.htm">
+    Hello, world!(swi, oabi)</a><br>
 
 &oplus;
 <b>Assembly (ARM 64)</b><br>
