--- a/program.htm
+++ b/program.htm
@@ -204,17 +204,17 @@ GNU</h3>
 &oplus;
 <b>Assembly (ARM 64)</b><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/arm64_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_arm64_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/arm64_hello_svc.htm">
-    hello, world! (svc)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_arm64_hello_svc.htm">
+    Hello, world!(svc)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/arm64_hello_printf.htm">
-    hello, world! (printf)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_arm64_hello_printf.htm">
+    Hello, world!(printf)</a><br>
 
 &oplus;
 <b>Assembly (MIPSEL)</b><br>
