--- a/program.htm
+++ b/program.htm
@@ -219,17 +219,17 @@ GNU</h3>
 &oplus;
 <b>Assembly (MIPSEL)</b><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/mipsel_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_mipsel_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/mipsel_hello_printf.htm">
-    hello, world! (printf)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_mipsel_hello_printf.htm">
+    Hello, world!(printf)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/mipsel_hello_syscall.htm">
-    hello, world! (syscall)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_mipsel_hello_syscall.htm">
+    Hello, world!(syscall)</a><br>
 
 &oplus;
 <b>Assembly (RISC-V 64)</b><br>
