--- a/program.htm
+++ b/program.htm
@@ -234,40 +234,40 @@ GNU</h3>
 &oplus;
 <b>Assembly (RISC-V 64)</b><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/riscv64_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_riscv64_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/riscv64_hello_ecall.htm">
-    hello, world! (ecall)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_riscv64_hello_ecall.htm">
+    Hello, world!(ecall)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/riscv64_hello_printf.htm">
-    hello, world! (printf)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_riscv64_hello_printf.htm">
+    Hello, world!(printf)</a><br>
 
 &oplus;
 <b>Assembly (x86)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x86_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x86_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x86_hello_gs.htm">
-    hello, world! (gs)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x86_hello_gs.htm">
+    Hello, world!(gs)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x86_hello_printf.htm">
-    hello, world! (printf)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x86_hello_printf.htm">
+    Hello, world!(printf)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x86_hello_int80.htm">
-    hello, world! (int 0x80)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x86_hello_int80.htm">
+    Hello, world!(int 0x80)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x86_hello_sysenter.htm">
-    hello, world! (sysenter)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x86_hello_sysenter.htm">
+    Hello, world!(sysenter)</a><br>
 
 &oplus;
 <b>Assembly (x64)</b><br>
