--- a/program.htm
+++ b/program.htm
@@ -272,21 +272,21 @@ GNU</h3>
 &oplus;
 <b>Assembly (x64)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x64_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x64_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x64_hello_printf.htm">
-    hello, world! (printf)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x64_hello_printf.htm">
+    Hello, world!(printf)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x64_hello_syscall.htm">
-    hello, world! (syscall)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x64_hello_syscall.htm">
+    Hello, world!(syscall)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/x64_hello_int80.htm">
-    hello, world! (int 0x80)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_x64_hello_int80.htm">
+    Hello, world!(int 0x80)</a><br>
 
 &lowast;
 <a href="program/gnu/invoke.htm">
