--- a/program.htm
+++ b/program.htm
@@ -288,69 +288,65 @@ GNU</h3>
     <a href="program/gnu_x64_hello_int80.htm">
     Hello, world!(int 0x80)</a><br>
 
-&lowast;
-<a href="program/gnu/invoke.htm">
-invoke</a><br>
+&dash;
+<a href="program/gnu_invoke.htm">
+Invoke</a><br>
 
-&lowast;
-<a href="program/gnu/struct.htm">
-struct</a><br>
+&dash;
+<a href="program/gnu_struct.htm">
+Struct</a><br>
 
-&lowast;
+&dash;
+<a href="program/gnu_set_pid.htm">
+Set PID</a><br>
+
+&dash;
 <a href="program/gnu_bash_array.htm">
 BASH Array</a><br>
 
-&lowast;
-<a href="program/gnu/restore_pid.htm">
-restore pid</a><br>
+&dash;
+<a href="program/gnu_rdynamic.htm">
+CFLAGS -rdynamic</a><br>
 
-&lowast;
-<a href="program/gnu/cpp_rdynamic.htm">
--rdynamic</a><br>
+&dash;
+<a href="program/gnu_sant.htm">
+CFLAGS -fsanitize=address</a><br>
 
-&lowast;
-<a href="program/gnu/sant.htm">
--fsanitize=address</a><br>
-
-&lowast;
-<a href="program/gnu/makefile_phony.htm">
+&dash;
+<a href="program/gnu_phony.htm">
 Makefile .PHONY</a><br>
 
-&lowast;
-<a href="program/gnu/makefile_equ.htm">
+&dash;
+<a href="program/gnu_equ.htm">
 Makefile =、:=、?=、+=</a><br>
 
-&lowast;
-<a href="program/gnu/makefile_cflags.htm">
+&dash;
+<a href="program/gnu_extra_cflags.htm">
 Makefile EXTRA_CFLAGS</a><br>
 
-&lowast;
-<a href="program/gnu/makefile_shell.htm">
-Makefile 列印shell執行結果</a><br>
+&dash;
+<a href="program/gnu_info_shell.htm">
+Makefile 列印Shell執行結果</a><br>
 
-&lowast;
-<a href="program/gnu/x86_int80_sysenter_syscall.htm">
+&dash;
+<a href="program/gnu_sysenter_syscall.htm">
 int 0x80、sysenter、syscall</a><br>
 
-&lowast;
-<a href="program/gnu/pragma.htm">
+&dash;
+<a href="program/gnu_preprocessor.htm">
 如何在Preprocessor列印定義的數值</a><br>
 
-&lowast;
-<a href="program/gnu/ld_library_path.htm">
-如何編譯ELF並使用指定的LIB路徑執行</a><br>
+&dash;
+<a href="program/gnu_musl_dlclose.htm">
+關於musl libc: Share Library Unload問題</a><br>
 
-&lowast;
-<a href="program/gnu/musl_dlclose.htm">
-關於musl libc dlclose unload問題</a><br>
+&dash;
+<a href="program/gnu_fix_lrt.htm">
+解決Undefined reference to mq_timedreceive問題</a><br>
 
-&lowast;
-<a href="program/gnu/fix_lrt.htm">
-解決"undefined reference to mq_timedreceive"問題</a><br>
-
-&lowast;
-<a href="program/gnu/fix_undef_limb.htm">
-解決"undefined reference to __gmpn_invert_limb"問題</a>
+&dash;
+<a href="program/gnu_fix_limb.htm">
+解決Undefined reference to __gmpn_invert_limb問題</a>
 <br><br><br><br>
 
 <div id="nasm"></div>
