--- a/program.htm
+++ b/program.htm
@@ -357,29 +357,29 @@ Netwide Assembler (NASM)</h3>
 &oplus;
 <b>Assembly (x86)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/x86_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_x86_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/x86_hello_gs.htm">
-    hello, world! (gs)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_x86_hello_gs.htm">
+    Hello, world!(gs)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/x86_hello_printf.htm">
-    hello, world! (printf)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_x86_hello_printf.htm">
+    Hello, world!(printf)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/x86_hello_int80.htm">
-    hello, world! (int 0x80)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_x86_hello_int80.htm">
+    Hello, world!(int 0x80)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/x86_hello_sysenter.htm">
-    hello, world! (sysenter)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_x86_hello_sysenter.htm">
+    Hello, world!(sysenter)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/x86_argc.htm">
-    argc、argv</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_x86_argv.htm">
+    Parse argv</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API</b><br>
