--- a/program.htm
+++ b/program.htm
@@ -400,11 +400,11 @@ Netwide Assembler (NASM)</h3>
     <a href="program/nasm_x64_hello_int80.htm">
     Hello, world!(int 0x80)</a><br>
 
-&emsp;&emsp;&emsp;&emsp;&oplus;
+&oplus;
 <b>Win32 API</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
