--- a/program.htm
+++ b/program.htm
@@ -500,11 +500,11 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32_text.htm">
         Draw Text</a><br>
                 
-&emsp;&emsp;&emsp;&emsp;&oplus;
+&oplus;
 <b>Win32 API (NASMX)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32x_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32x_setup.htm">
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
