--- a/program/nasm_win32x_setup.htm
+++ b/program/nasm_win32x_setup.htm
@@ -2,11 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - Netwide Assembler (NASM) - Win32 API - <b>開發環境</b></h3>
+<h3><a href="../program.htm">程式語言</a> - Netwide Assembler (NASM) - NASMX - <b>開發環境</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
-https://www.masm32.com/<br><br>
+https://www.masm32.com/<br>
+https://sourceforge.net/projects/nasmx/<br><br>
 
 司徒目前是使用Box86 + Wine當作開發測試環境，Box86可以用來執行Intel x86指令集的程式，Box64則是可以用來執行Intel x64指令集的程式，而Wine則是可以用來跑Windows程式，Wine是Windows API層相容，但不是二進制層相容，意思就是，如果Wine是ARM armhf版本的話，Wine執行的程式就必須是ARM armhf指令集的程式，而如果Wine是Intel x86/x64版本，Wine執行的程式就必須是Intel x86/x64指令集的程式，這也是為何Windows PE程式(Intel x86/x64)可以在Linux PC(Intel x86/x64)下用Wine來執行的原因，而司徒目前是要在手機(ARM aarch64)上開發Windows x86/x64程式，所以才需要使用Box86 + Wine，司徒使用的Wine版本支援Intel x86(wine)/x64(win64)程式，安裝步驟如下：
 </p>
@@ -27,22 +28,30 @@ DPI設定成144<br>
 </p>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/website/releases/download/nasm/nasm.tar.gz
+$ wget https://github.com/steward-fu/website/releases/download/nasm/nasmx.tar.gz
 $ wget https://github.com/steward-fu/website/releases/download/nasm/masm32.tar.gz
-$ tar xvf nasm.tar.gz
+$ tar xvf nasmx.tar.gz
 $ tar xvf masm32.tar.gz
-$ mv nasm /home/user/.wine_amd64/drive_c/
+$ mv nasmx /home/user/.wine_amd64/drive_c/
 $ mv masm32 /home/user/.wine_amd64/drive_c/
-</pre><br>
+</pre>
 <p>
 接着測試是否可以正常執行程式
 </p>
 <pre>
-$ WINEPREFIX=/home/user/.wine_amd64 box86 wine /home/user/.wine_amd64/drive_c/masm32/demo.exe
+$ WINEPREFIX=/home/user/.wine_amd64 box86 wine /home/user/.wine_amd64/drive_c/nasmx/demo.exe
 </pre>
 <p>
 <img style="border:0px" src="nasm_win32_setup/2.jpg" class="maxSize"><br>
 P.S. 所有需要的Share Library(*.so and *.dll)都必須成功載入，否者將無法正確執行Windows PE程式
 </p>
 
-<br><script type="text/javascript" src="../tail.js"></script>
+<p>
+<br><a href="../../program.htm">返回上一頁</a>
+</p>
+
+</div>
+</div>
+</div>
+</body>
+</html>
