--- a/program.htm
+++ b/program.htm
@@ -426,18 +426,18 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm_win32_dlg_event.htm">
         Handle Event</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+    &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Single Document Interface (SDI)</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32_sdi_window.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32_sdi_window.htm">
         Create Window</a><br>
     
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32_sdi_event.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32_sdi_event.htm">
         Handle Event</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/nasm/win32_keyboard.htm">
     Keyboard Event</a><br>
 
