--- a/program/nasm_win32_head.htm
+++ b/program/nasm_win32_head.htm
@@ -233,7 +233,9 @@ defWndProc  dd  0
 CommandLine dd  0
 hdc         dd  0
 font        dd  0
-  
+buf         times 255 db 0
+fmt         db "key: %d",0
+
 msg istruc MSG
     at .hwnd,    dd 0
     at .message, dd 0
