--- a/program.htm
+++ b/program.htm
@@ -445,8 +445,8 @@ Netwide Assembler (NASM)</h3>
     <a href="program/nasm_win32_keyboard.htm">
     Keyboard Event</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32_mouse.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32_mouse.htm">
     Mouse Event</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
