--- a/program/nasm_win32_dlg_event.htm
+++ b/program/nasm_win32_dlg_event.htm
@@ -15,46 +15,46 @@ main.asm
 </p>
 <pre class="brush:asm">
     %include "head.asm"
-
+ 
     segment .text
 WndProc:
     push ebp
     mov ebp, esp
-
+ 
     cmp dword [ebp + 0ch], WM_CLOSE
     je .handle_close
     cmp dword [ebp + 0ch], WM_DESTROY
     je .handle_destroy
     jmp .handle_default
-
+ 
 .handle_close:
     push dword [ebp + 8]
     call DestroyWindow
     xor eax, eax
     jmp .finish
-
+ 
 .handle_destroy:
     push 0
     call PostQuitMessage
     xor eax, eax
     jmp .finish
-
+ 
 .handle_default:
     push dword [ebp + 14h]
     push dword [ebp + 10h]
     push dword [ebp + 0ch]
     push dword [ebp + 8h]
-    push dword [defWndProc]
+    push dword [pDefWndProc]
     call CallWindowProc
-
+ 
 .finish:
     leave
     ret 16
-
+ 
 WinMain:
     push ebp
     mov ebp, esp
- 
+  
     push 0
     push 0
     push 0
@@ -64,18 +64,18 @@ WinMain:
     push 0
     push 0
     push WS_OVERLAPPEDWINDOW | WS_VISIBLE
-    push szCaption
+    push szAppName
     push WC_DIALOG
     push WS_EX_LEFT
     call CreateWindowEx
     mov [hWin], eax
-
+ 
     push WndProc
     push GWL_WNDPROC
     push dword [hWin]
     call SetWindowLong
-    mov [defWndProc], eax
- 
+    mov [pDefWndProc], eax
+  
 .loop:
     push 0
     push 0
@@ -84,30 +84,30 @@ WinMain:
     call GetMessage
     cmp eax, 0
     je .exit
- 
+  
     push msg
     call DispatchMessage
     jmp .loop
- 
+  
 .exit:
     mov eax, [msg + MSG.wParam]
     leave
     ret 16
- 
+  
 _start:
     push 0
     call GetModuleHandle
     mov [hInstance], eax
- 
+  
     call GetCommandLine
-    mov [CommandLine], eax
- 
+    mov [pCommand], eax
+  
     push SW_SHOWNORMAL
-    push dword [CommandLine]
+    push dword [pCommand]
     push 0
     push dword [hInstance]
     call WinMain
- 
+  
     push eax
     call ExitProcess
 </pre>
