--- a/program/nasm_win32_keyboard.htm
+++ b/program/nasm_win32_keyboard.htm
@@ -29,12 +29,12 @@ main.asm
 </p>
 <pre class="brush:asm">
     %include "head.asm" 
-
+ 
     segment .text
 WndProc:
     push ebp
     mov ebp, esp
- 
+  
     cmp dword [ebp + ARG2], WM_KEYDOWN
     je .handle_keydown
     cmp dword [ebp + ARG2], WM_SYSKEYDOWN
@@ -44,47 +44,47 @@ WndProc:
     cmp dword [ebp + ARG2], WM_DESTROY
     je .handle_destroy
     jmp .handle_default
-
+ 
 .handle_keydown:
     push dword [ebp + ARG3]
-    push fmt
-    push buf
+    push FMT_KBD
+    push pBuf
     call sprintf
-
-    push buf
+ 
+    push pBuf
     push dword [ebp + ARG1]
     call SetWindowText
     xor eax, eax
     jmp .finish
-
+ 
 .handle_close:
     push dword [ebp + ARG1]
     call DestroyWindow
     xor eax, eax
     jmp .finish
- 
+  
 .handle_destroy:
     push 0
     call PostQuitMessage
     xor eax, eax
     jmp .finish
- 
+  
 .handle_default:
     push dword [ebp + ARG4]
     push dword [ebp + ARG3]
     push dword [ebp + ARG2]
     push dword [ebp + ARG1]
-    push dword [defWndProc]
+    push dword [pDefWndProc]
     call CallWindowProc
- 
+  
 .finish:
     leave
     ret 16
- 
+  
 WinMain:
     push ebp
     mov ebp, esp
-  
+   
     push 0
     push 0
     push 0
@@ -94,18 +94,18 @@ WinMain:
     push 0
     push 0
     push WS_OVERLAPPEDWINDOW | WS_VISIBLE
-    push szCaption
+    push szAppName
     push WC_DIALOG
     push WS_EX_LEFT
     call CreateWindowEx
     mov [hWin], eax
- 
+  
     push WndProc
     push GWL_WNDPROC
     push dword [hWin]
     call SetWindowLong
-    mov [defWndProc], eax
-  
+    mov [pDefWndProc], eax
+   
 .loop:
     push 0
     push 0
@@ -114,30 +114,30 @@ WinMain:
     call GetMessage
     cmp eax, 0
     je .exit
-  
+   
     push msg
     call DispatchMessage
     jmp .loop
-  
+   
 .exit:
     mov eax, [msg + MSG.wParam]
     leave
     ret 16
-  
+   
 _start:
     push 0
     call GetModuleHandle
     mov [hInstance], eax
-  
+   
     call GetCommandLine
-    mov [CommandLine], eax
-  
+    mov [pCommand], eax
+   
     push SW_SHOWNORMAL
-    push dword [CommandLine]
+    push dword [pCommand]
     push 0
     push dword [hInstance]
     call WinMain
-  
+   
     push eax
     call ExitProcess
 </pre>
