--- a/program/nasm_win32_head.htm
+++ b/program/nasm_win32_head.htm
@@ -236,6 +236,12 @@ hFont       dd  0
 pBuf        times 255 db 0
 FMT_KBD     db "Key: %d",0
 FMT_MOUSE   db "%d-%d",0
+FMT_TIMER   db "%d",0
+dwCnt       dd 0
+SLUP        db "LINE++",0
+SLDN        db "LINE--",0
+SPUP        db "PAGE++",0
+SPDN        db "PAGE--",0
 
 msg istruc MSG
     at .hwnd,    dd 0
