--- a/program.htm
+++ b/program.htm
@@ -449,13 +449,13 @@ Netwide Assembler (NASM)</h3>
     <a href="program/nasm_win32_mouse.htm">
     Mouse Event</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32_timer.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32_timer.htm">
     Set Timer</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32_scrollbar.htm">
-    Set ScrollBar</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32_scrollbar.htm">
+    Set Scrollbar</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Painting</b><br>
