--- a/program.htm
+++ b/program.htm
@@ -457,11 +457,11 @@ Netwide Assembler (NASM)</h3>
     <a href="program/nasm_win32_scrollbar.htm">
     Set Scrollbar</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+    &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Painting</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32_pixel.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32_pixel.htm">
         Set Pixel</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
