--- a/program.htm
+++ b/program.htm
@@ -464,8 +464,8 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm_win32_pixel.htm">
         Set Pixel</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32_brush.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32_brush.htm">
         Create Brush</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
