--- a/program/nasm_win32_head.htm
+++ b/program/nasm_win32_head.htm
@@ -223,27 +223,28 @@ _msvcrt     db "/defaultlib:c:\\masm32\\lib\\msvcrt.lib "
 _kernel32   db "/defaultlib:c:\\masm32\\lib\\kernel32.lib "
                     
     segment .data
-szAppName   db  "main",0
-szAppFont   db  "Arial",0
-szTestMsg   db  "Test",0
-dwTestMsg   equ ($ - szTestMsg) - 1
-hWin        dd  0
-hInstance   dd  0
-pDefWndProc dd  0
-pCommand    dd  0
-hDC         dd  0
-hFont       dd  0
+szAppName   db "main",0
+szAppFont   db "Arial",0
+szTestMsg   db "Test",0
+TestMsgLen  equ ($ - szTestMsg) - 1
 pBuf        times 255 db 0
 FMT_KBD     db "Key: %d",0
 FMT_MOUSE   db "%d-%d",0
 FMT_TIMER   db "%d",0
-dwCnt       dd 0
 SLUP        db "LINE++",0
 SLDN        db "LINE--",0
 SPUP        db "PAGE++",0
 SPDN        db "PAGE--",0
+hWin        dd 0
+hInstance   dd 0
+pDefWndProc dd 0
+pCommand    dd 0
+hDC         dd 0
+hBrush      dd 0
+hFont       dd 0
 x           dd 0
 y           dd 0
+dwCnt       dd 0
 
 msg istruc MSG
     at .hwnd,    dd 0
