--- a/program/nasm_win32_head.htm
+++ b/program/nasm_win32_head.htm
@@ -224,9 +224,9 @@ _kernel32   db "/defaultlib:c:\\masm32\\lib\\kernel32.lib "
                     
     segment .data
 szAppName   db "main",0
-szAppFont   db "Arial",0
-szTestMsg   db "Test",0
-TestMsgLen  equ ($ - szTestMsg) - 1
+szFont      db "Arial",0
+szMsg       db "Test",0
+MsgLen      equ ($ - szMsg) - 1
 pBuf        times 255 db 0
 FMT_KBD     db "Key: %d",0
 FMT_MOUSE   db "%d-%d",0
@@ -240,6 +240,7 @@ hInstance   dd 0
 pDefWndProc dd 0
 pCommand    dd 0
 hDC         dd 0
+hPen        dd 0
 hBrush      dd 0
 hFont       dd 0
 x           dd 0
