--- a/program.htm
+++ b/program.htm
@@ -476,8 +476,8 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm_win32_font.htm">
         Create Font</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32_line.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32_line.htm">
         Draw Line</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
