GNU Added an example for protocol buffers.

--- a/program.htm
+++ b/program.htm
@@ -139,6 +139,10 @@ GNU</h3>
     Set Capability</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_protobuf.htm">
+    Protocol Buffers</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_multiline_string.htm">
     Multiline String</a><br>
 
