--- a/program/nasm_win32_head.htm
+++ b/program/nasm_win32_head.htm
@@ -243,9 +243,10 @@ hDC         dd 0
 hPen        dd 0
 hBrush      dd 0
 hFont       dd 0
+dwCnt       dd 0
 x           dd 0
 y           dd 0
-dwCnt       dd 0
+pt          times (POINT.SIZE * 3) db 0
 
 msg istruc MSG
     at .hwnd,    dd 0
