--- a/program.htm
+++ b/program.htm
@@ -519,8 +519,12 @@ Netwide Assembler (NASM)</h3>
     <a href="program/nasm_win32x_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32x_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32x_makefile.htm">
+    Makefile</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32x_hello.htm">
     Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
