--- a/program/nasm_win32x_setup.htm
+++ b/program/nasm_win32x_setup.htm
@@ -46,12 +46,4 @@ $ WINEPREFIX=/home/user/.wine_amd64 box86 wine /home/user/.wine_amd64/drive_c/na
 P.S. 所有需要的Share Library(*.so and *.dll)都必須成功載入，否者將無法正確執行Windows PE程式
 </p>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
