--- a/program/nasm_win32x_setup.htm
+++ b/program/nasm_win32x_setup.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - Netwide Assembler (NASM) - NASMX - <b>開發環境</b></h3>
+<h3><a href="../program.htm">程式語言</a> - Netwide Assembler (NASM) - Win32 API (NASMX) - <b>開發環境</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
