--- a/program.htm
+++ b/program.htm
@@ -549,23 +549,23 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm_win32x_sdi_event.htm">
         Handle Event</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32x_keyboard.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32x_keyboard.htm">
     Keyboard Event</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32x_mouse.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32x_mouse.htm">
     Mouse Event</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32x_timer.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32x_timer.htm">
     Set Timer</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/nasm/win32x_scrollbar.htm">
-    Set ScrollBar</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/nasm_win32x_scrollbar.htm">
+    Set Scrollbar</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+    &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Painting</b><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
