--- a/program.htm
+++ b/program.htm
@@ -568,65 +568,65 @@ Netwide Assembler (NASM)</h3>
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Painting</b><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_pixel.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_pixel.htm">
         Set Pixel</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_brush.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_brush.htm">
         Create Brush</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_pen.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_pen.htm">
         Create Pen</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_font.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_font.htm">
         Create Font</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_line.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_line.htm">
         Draw Line</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_rect.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_rect.htm">
         Draw Rectangle</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_ellipse.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_ellipse.htm">
         Draw Ellipse</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_polygon.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_polygon.htm">
         Draw Polygon</a><br>
                 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_arc.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_arc.htm">
         Draw Arc</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_chord.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_chord.htm">
         Draw Chord</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_pie.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_pie.htm">
         Draw Pie</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/nasm/win32x_text.htm">
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="program/nasm_win32x_text.htm">
         Draw Text</a><br>
 
-&lowast;
-<a href="program/nasm/fix_libgcc.a.htm">
-解決"undefined reference to __udivdi3"問題</a><br>
+&dash;
+<a href="program/nasm_fix_libgcc.htm">
+解決Undefined reference to __udivdi3問題</a><br>
 
-&lowast;
-<a href="program/nasm/fix_libgcc_eh.a.htm">
-解決"undefined reference to _Unwind_Resume"問題</a><br>
+&dash;
+<a href="program/nasm_fix_libgcc_eh.htm">
+解決Undefined reference to _Unwind_Resume問題</a><br>
 
-&lowast;
-<a href="program/nasm/fix_start-group.htm">
-解決"undefined reference to dl_iterate_phdr"問題</a><br>
+&dash;
+<a href="program/nasm_fix_start-group.htm">
+解決Undefined reference to dl_iterate_phdr問題</a><br>
 <br><br><br><br>
 
 <div id="masm32"></div>
