--- a/program/nasm_win32x_makefile.htm
+++ b/program/nasm_win32x_makefile.htm
@@ -13,7 +13,7 @@ NASM32=/home/user/.wine_amd64/drive_c/nasmx
 
 all:
 	${MYWINE} ${NASM32}/bin/nasm.exe -fwin32 ${TARGET}.asm
-	${MYWINE} ${NASM32}/bin/GoLink.exe /entry _main ${TARGET}.obj kernel32.dll user32.dll msvcrt.dll /mix
+	${MYWINE} ${NASM32}/bin/GoLink.exe /entry _main ${TARGET}.obj kernel32.dll user32.dll gdi32.dll msvcrt.dll /mix
 
 run:
 	${MYWINE} ${TARGET}.exe
