--- a/index.htm
+++ b/index.htm
@@ -5648,32 +5648,32 @@ HTC Kaiser 3.7V 1250mA電池</a><br>
 build psptoolchain</a><br>
 <br><br><br><br>
 
-<div id="psv1000"></div>
-<h3><img src="img/photos/psv1000.jpg" class="floatLeft"/>
-PlayStation Vita 1000</h3>
-<hr size="1"><br><br><br><br><br>
-
-&lowast;
-<a href="handheld/psv1000/review.htm">
-介紹</a><br>
-
-&lowast;
-<a href="handheld/psv1000/uart.htm">
-UART位置</a><br>
-<br><br><br><br>
-
 <div id="psv2000"></div>
 <h3><img src="img/photos/psv2000.jpg" class="floatLeft"/>
 PlayStation Vita 2000</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="handheld/psv2000/review.htm">
-介紹</a><br>
+&dash;
+<a href="handheld/psv2000_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="handheld/psv2000/build_toolchain.htm">
-build toolchain</a><br>
+&dash;
+<a href="handheld/psv2000_buildscript.htm">
+Build Toolchain</a><br>
+<br><br><br><br>
+
+<div id="psv1000"></div>
+<h3><img src="img/photos/psv1000.jpg" class="floatLeft"/>
+PlayStation Vita 1000</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/psv1000_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="handheld/psv1000_uart.htm">
+UART位置</a><br>
 <br><br><br><br>
 
 <div id="funkeys"></div>
