--- a/handheld/pyra_spec.htm
+++ b/handheld/pyra_spec.htm
@@ -8,7 +8,7 @@
     <tr><th>CHIP</th><td>TI OMAP5432</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A15 1.5GHz (x2)<br>ARM Cortex-M4 1.5GHz (x2)</td></tr>
     <tr><th>GPU</th><td>PowerVR SGX544-MP2<br>Vivante GC320</td></tr>
-    <tr><th>MEMORY</th><td>RAM 4GB RAM<br>eMMC 32GB</td></tr>
+    <tr><th>MEMORY</th><td>RAM 4GB<br>eMMC 32GB</td></tr>
     <tr><th>DISPLAY</th><td>5.0" 1280x720 (Resistive)</td></tr>
     <tr><th>INPUT</th><td>GamePad<br>JoyStick<br>QWERTY</td></tr>
     <tr><th>SLOT</th><td>SD (x2)</td></tr>
