RG28XX How to extract boot0 image.

--- a/index.htm
+++ b/index.htm
@@ -1445,6 +1445,10 @@ Anbernic RG28XX</h3>
 <a href="handheld/rg28xx_battery.htm">
 如何取得電池電量</a><br>
 
+&dash;
+<a href="handheld/rg28xx_extract_boot0.htm">
+Extract BOOT0</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
