RG28XX How to extract boot-loader environment.

--- a/index.htm
+++ b/index.htm
@@ -1447,7 +1447,15 @@ Anbernic RG28XX</h3>
 
 &dash;
 <a href="handheld/rg28xx_extract_boot0.htm">
-Extract BOOT0</a><br>
+Extract boot0</a><br>
+
+&dash;
+<a href="handheld/rg28xx_extract_boot_package.htm">
+Extract sunxi-package</a><br>
+
+&dash;
+<a href="handheld/rg28xx_extract_env.htm">
+Extract environment</a><br>
 
 &oplus;
 <b>C/C++</b><br>
