RG28XX How to extract kernel and config.gz files.

--- a/index.htm
+++ b/index.htm
@@ -1457,6 +1457,10 @@ Extract sunxi-package</a><br>
 <a href="handheld/rg28xx_extract_env.htm">
 Extract environment</a><br>
 
+&dash;
+<a href="handheld/rg28xx_extract_kernel.htm">
+Extract kernel、config.gz</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
