--- a/program/nasm_win32_hello.htm
+++ b/program/nasm_win32_hello.htm
@@ -31,7 +31,7 @@ _kernel32 db "/defaultlib:c:\\masm32\\lib\\kernel32.lib "
 
     segment .data
 szCaption db "main",0
-szContent db "Hello, world",0
+szContent db "Hello, world!",0
 
     segment .text
 _start:
