--- a/program.htm
+++ b/program.htm
@@ -481,11 +481,11 @@ Wine</h3>
         Menu<br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
-            <a href="program/wine_cpp_menu.htm">
+            <a href="program/wine_cpp_menu_resource.htm">
             Resource</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_menu_create.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_menu_create.htm">
             CreateMenu</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
