--- a/program.htm
+++ b/program.htm
@@ -478,26 +478,26 @@ Wine</h3>
             StretchBlt</a><br>
                     
         &emsp;&emsp;&emsp;&emsp;&oplus;
-        Menu<br>
+        <b>Menu</b><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
             <a href="program/wine_cpp_menu_resource.htm">
-            Resource</a><br>
+            Resource Menu</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
             <a href="program/wine_cpp_menu_create.htm">
-            CreateMenu</a><br>
+            Create Menu</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_sysmenu.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_menu_system.htm">
             System Menu</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_trackmenu.htm">
-            TrackPopupMenu</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_menu_track.htm">
+            TrackPopup Menu</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&oplus;
-        Controls<br>
+        <b>Controls</b><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_button.htm">
@@ -508,7 +508,7 @@ Wine</h3>
             Edit</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&oplus;
-        Resource<br>
+        <b>Resource</b><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_icon.htm">
@@ -539,7 +539,7 @@ Wine</h3>
             CreateDialog</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&oplus;
-        Common Dialog<br>
+        <b>Common Dialog</b><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_openfile.htm">
