--- a/program.htm
+++ b/program.htm
@@ -482,29 +482,29 @@ Wine</h3>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
             <a href="program/wine_cpp_menu_resource.htm">
-            Resource Menu</a><br>
+            Resource</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
             <a href="program/wine_cpp_menu_create.htm">
-            Create Menu</a><br>
+            CreateMenu</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
             <a href="program/wine_cpp_menu_system.htm">
-            System Menu</a><br>
+            SystemMenu</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
             <a href="program/wine_cpp_menu_track.htm">
-            TrackPopup Menu</a><br>
+            TrackPopupMenu</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&oplus;
-        <b>Controls</b><br>
+        <b>Control</b><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_button.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_control_btn.htm">
             Button</a><br>
         
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_edit.htm">
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+            <a href="program/wine_cpp_control_edit.htm">
             Edit</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&oplus;
@@ -569,8 +569,8 @@ Wine</h3>
             <a href="program/wine/cpp_dlg_replacetext.htm">
             ReplaceText</a><br>
 
-&lowast;
-<a href="program/wine/systemmenu.htm">
+&dash;
+<a href="program/wine_systemmenu.htm">
 如何顯示System Menu</a><br>    
 <br><br><br><br>
 
