--- a/program/wine_cpp_control_btn.htm
+++ b/program/wine_cpp_control_btn.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../program.htm">程式語言</a> - Wine - C/C++ - Menu - <b>CreateMenu</b></h3>
+<h3><a href="../program.htm">程式語言</a> - Wine - C/C++ - Control - <b>Button</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -17,9 +17,10 @@ main.c
 <pre class="brush:cpp">
 #include &lt;windows.h&gt;
 
-#define IDM_EXIT 101
+#define ID_BTN 1000
 
 HWND hWin = NULL;
+HWND hBtn = NULL;
 WNDPROC defWndProc = NULL;
 
 LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
@@ -33,11 +34,11 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         return 0;
     case WM_COMMAND:
         switch (LOWORD(wParam)) {
-        case IDM_EXIT:
-            DestroyWindow(hWnd);
-            break;
+        case ID_BTN:
+            MessageBox(hWnd, "I am button", "main", MB_OK);
+            return 0;
         }
-        return 0;
+        break;
     }
     return CallWindowProc(defWndProc, hWnd, uMsg, wParam, lParam);
 }
@@ -46,13 +47,9 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
 {
     hWin = CreateWindow(WC_DIALOG, "main",
         WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL);
+    hBtn = CreateWindow("BUTTON", "Test", WS_CHILD | WS_VISIBLE | BS_PUSHBUTTON, 50, 50, 100,
+        100, hWin, (HMENU)ID_BTN, NULL, NULL);
     defWndProc = (WNDPROC)SetWindowLongPtr(hWin, GWLP_WNDPROC, (long int)WndProc);
-
-    HMENU hMenu = CreateMenu();
-    HMENU hSubMenu = CreateMenu();
-    AppendMenu(hSubMenu, MF_STRING, IDM_EXIT, "Exit");
-    AppendMenu(hMenu, MF_POPUP, (UINT_PTR)hSubMenu, "File");
-    SetMenu(hWin, hMenu);
 
     MSG msg = {0};
     while (GetMessage(&amp;msg, NULL, 0, 0)) {
@@ -62,7 +59,6 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
     return 0;
 }
 </pre><br>
-
 <p>
 編譯、執行
 </p>
@@ -71,7 +67,8 @@ $ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="nasm_win32_menu_resource/1.jpg" class="maxSize">
+<img style="border:0px" src="nasm_win32_control_btn/1.jpg" class="maxSize"><br>
+<img style="border:0px" src="nasm_win32_control_btn/2.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
